# claude-code-acp-rs

./: .gitmodules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  cd.yml  ci.yml  pr.yml  release.yml
docs/: MESSAGE_ORDERING_ISSUE.md  PERMISSION_TODO.md  SDK_ERROR_IMMEDIATE_RETURN.md
examples/: thinking_mode.sh
specs/claude-code-acp/: claude-agent-sdk-feature.md  claude-code-acp-feature.md  claude-code-acp-plan.md  claude-code-acp-spec.md  claude-code-acp.md
src/: lib.rs  main.rs
src/agent/: core.rs  flush.rs  handlers.rs  mod.rs  runner.rs  slash_commands.rs
src/command_safety/: is_dangerous_command.rs  is_safe_command.rs  mod.rs
src/converter/: notification.rs  tool.rs
src/hooks/: callback_registry.rs  post_tool_use.rs  pre_tool_use.rs
src/mcp/: acp_server.rs  external.rs  registry.rs  server.rs
src/mcp/tools/: bash.rs  edit.rs  exit_plan_mode.rs  glob.rs  grep.rs  notebook_read.rs  slash_command.rs  write.rs
src/permissions/: can_use_tool.rs  mod.rs
src/permissions/strategies/: accept_edits_mode.rs  bypass_permissions_mode.rs  default_mode.rs  dont_ask_mode.rs  mod.rs  plan_mode.rs  strategy_trait.rs
src/session/: manager.rs  mod.rs  permission.rs  permission_manager.rs  permission_request.rs  prompt_manager.rs  session.rs  wrapped_child.rs
src/settings/: manager.rs  permission_checker.rs  rule.rs
src/terminal/: client.rs
src/types/: config.rs  meta.rs
src/utils/: mod.rs  paths.rs
