[package]
name = "claude-code-acp-rs"
version = "0.0.0"
authors = ["guochao.song <soddygo@qq.com>"]
edition = "2024"
description = "Use Claude Code from any ACP client"
repository = "https://github.com/soddygo/claude-code-acp-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]

[[bin]]
path = "src/main.rs"
name = "claude_code_acp_rs-cli"

